# stm32f4-cmake

./: CMakeLists.txt
app/: STM32F446RETX_FLASH.ld
app/Inc/: main.h  stm32f4xx_spi.h
app/Src/: main.c  stm32f4xx_spi.c
cmake_files/: BSP.cmake  CMSIS.cmake  STM32F4xx_Hal.cmake  STM32F4xx_Nucleo.cmake  toolchain_config.cmake
